<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time</string>
    <string name="action_more">更多</string>
    <string name="action_add">添加</string>

    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="done">确认</string>
    <string name="post">发表</string>
    <string name="edit">编辑</string>
    <string name="detail">详情</string>

    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="repassword">确认密码</string>
    <string name="login">登录</string>
    <string name="logining">登录中...</string>
    <string name="register">注册</string>
    <string name="login_out">注销登录</string>

    <string name="regist_tips">提示：由4~15位字母数字及下划线组成，区分大小写</string>

    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="user_info">个人资料</string>
    <string name="setting">设置</string>

    <string name="user_logo">头像</string>
    <string name="user_name">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_age">年龄</string>
    <string name="user_signature">个性签名</string>
    <string name="click_to_edit">点击填写</string>
    <string name="wu">无</string>

    <string name="male">男</string>
    <string name="female">女</string>

    <string name="photo_camera">拍照</string>
    <string name="photo_native">从相册选择</string>

    <string name="say_something">说点什么吧</string>
    <string name="comment">评论</string>
    <string name="like">赞</string>
    <string name="unlike">取消赞</string>

    <string name="is_notify">接收新评论通知</string>
    <string name="is_notify_detail">通知显示评论详情</string>
    <string name="is_notify_voice">声音</string>
    <string name="is_notify_virbate">振动</string>
    <string name="is_offsite_notify">异地登录提醒</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>

    <string name="new_comment">您有新的评论</string>
    <string name="offsite_notify_message">您已在其他设备登录</string>

    <string name="load_more">正在加载...</string>
    <string name="no_more">没有更多图片</string>
    <string name="load_completed">加载完成</string>
    <string name="load_error">加载失败，点击重新加载！</string>

</resources>
