<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:id="@+id/inputEare"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/top_bar"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:orientation="vertical">
        <com.hideactive.widget.ClearEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_bg_selector"
            android:drawableLeft="@mipmap/login_icon_username"
            android:drawableRight="@mipmap/et_clear"
            android:singleLine="true"
            android:maxLength="15"
            android:padding="@dimen/dimen_8dp"
            android:textSize="16sp"
            android:textColor="@color/text_color_1"
            android:hint="@string/account"/>
        <TextView
            android:id="@+id/tv_username_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:text="@string/regist_tips"
            android:textSize="12sp"
            android:textColor="@color/text_color_2"/>
        <com.hideactive.widget.ClearEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@drawable/input_bg_selector"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawableRight="@mipmap/et_clear"
            android:singleLine="true"
            android:maxLength="15"
            android:padding="@dimen/dimen_8dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/text_color_1"
            android:hint="@string/password"/>
        <TextView
            android:id="@+id/tv_password_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:text="@string/regist_tips"
            android:textSize="12sp"
            android:textColor="@color/text_color_2"/>
        <com.hideactive.widget.ClearEditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@drawable/input_bg_selector"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawableRight="@mipmap/et_clear"
            android:singleLine="true"
            android:maxLength="15"
            android:padding="@dimen/dimen_8dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/text_color_1"
            android:hint="@string/repassword"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/inputEare"
        android:background="@drawable/btn_bg_red_selector"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/register"/>
    
</RelativeLayout>
