<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:id="@+id/input_eare"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/top_bar"
        android:paddingLeft="@dimen/dimen_small"
        android:paddingRight="@dimen/dimen_small"
        android:layout_marginTop="@dimen/dimen_small"
        android:orientation="vertical">
        <com.hideactive.widget.ClearEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_bg_selector"
            android:drawableLeft="@mipmap/login_icon_username"
            android:drawableRight="@mipmap/et_clear"
            android:singleLine="true"
            android:padding="@dimen/dimen_small"
            android:textSize="16sp"
            android:textColor="@color/text_color_1"
            android:hint="@string/account"/>
        <com.hideactive.widget.ClearEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/dimen_small"
            android:background="@drawable/input_bg_selector"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawableRight="@mipmap/et_clear"
            android:singleLine="true"
            android:padding="@dimen/dimen_small"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/text_color_1"
            android:hint="@string/password"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_eare"
        android:layout_marginTop="@dimen/dimen_normal"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_bg_red_selector"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/login"/>
        <Button
            android:id="@+id/regist"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dimen_small"
            android:background="@drawable/btn_bg_grey_selector"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/regist"/>
    </LinearLayout>

</RelativeLayout>
