<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/user_item_logo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingLeft="@dimen/dimen_small"
        android:paddingRight="@dimen/dimen_small"
        android:background="@drawable/item_normal_selector"
        android:clickable="true"
        android:layout_marginTop="@dimen/dimen_small">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"
            android:text="@string/user_logo"/>
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/image_default"
            app:civ_border_width="0dp"
            app:civ_border_color="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_dark_transparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_item_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/user_item_logo"
        android:paddingLeft="@dimen/dimen_small"
        android:paddingRight="@dimen/dimen_small"
        android:clickable="true"
        android:background="@drawable/item_normal_selector">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"
            android:text="@string/user_name"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_dark_transparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_item_sex"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/user_item_name"
        android:layout_marginTop="@dimen/dimen_small"
        android:paddingLeft="@dimen/dimen_small"
        android:paddingRight="@dimen/dimen_small"
        android:clickable="true"
        android:background="@drawable/item_normal_selector">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"
            android:text="@string/user_sex"/>
        <TextView
            android:id="@+id/user_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_dark_transparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_item_age"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/user_item_sex"
        android:paddingLeft="@dimen/dimen_small"
        android:paddingRight="@dimen/dimen_small"
        android:clickable="true"
        android:background="@drawable/item_normal_selector">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"
            android:text="@string/user_age"/>
        <TextView
            android:id="@+id/user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_dark_transparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_item_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/user_item_age"
        android:layout_marginTop="@dimen/dimen_small"
        android:paddingLeft="@dimen/dimen_small"
        android:paddingRight="@dimen/dimen_small"
        android:clickable="true"
        android:background="@drawable/item_normal_selector">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp"
            android:text="@string/setting"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_dark_transparent"/>
    </RelativeLayout>

</RelativeLayout>
