<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_small"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/setting_item_user_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/user_info"/>
            <ImageView
                android:src="@mipmap/top_bar_down_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_item_is_notify"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/dimen_small"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/is_notify"/>
            <com.zcw.togglebutton.ToggleButton
                xmlns:toggle="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tb_is_notify"
                android:src="@mipmap/top_bar_down_normal"
                android:layout_width="54dp"
                android:layout_height="30dp"
                toggle:onColor="@color/green_light"
                toggle:offColor="@color/white"
                toggle:spotColor="@color/white"
                toggle:offBorderColor="@color/grey_light"
                toggle:borderWidth="2px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_item_is_notify_detail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/is_notify_detail"/>
            <com.zcw.togglebutton.ToggleButton
                xmlns:toggle="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tb_is_notify_detail"
                android:src="@mipmap/top_bar_down_normal"
                android:layout_width="54dp"
                android:layout_height="30dp"
                toggle:onColor="@color/green_light"
                toggle:offColor="@color/white"
                toggle:spotColor="@color/white"
                toggle:offBorderColor="@color/grey_light"
                toggle:borderWidth="2px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_item_is_notify_voice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/is_notify_voice"/>
            <com.zcw.togglebutton.ToggleButton
                xmlns:toggle="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tb_is_notify_voice"
                android:src="@mipmap/top_bar_down_normal"
                android:layout_width="54dp"
                android:layout_height="30dp"
                toggle:onColor="@color/green_light"
                toggle:offColor="@color/white"
                toggle:spotColor="@color/white"
                toggle:offBorderColor="@color/grey_light"
                toggle:borderWidth="2px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_item_is_notify_virbate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/is_notify_virbate"/>
            <com.zcw.togglebutton.ToggleButton
                xmlns:toggle="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tb_is_notify_virbate"
                android:src="@mipmap/top_bar_down_normal"
                android:layout_width="54dp"
                android:layout_height="30dp"
                toggle:onColor="@color/green_light"
                toggle:offColor="@color/white"
                toggle:spotColor="@color/white"
                toggle:offBorderColor="@color/grey_light"
                toggle:borderWidth="2px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_item_is_offsite_notify"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/dimen_small"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/is_offsite_notify"/>
            <com.zcw.togglebutton.ToggleButton
                xmlns:toggle="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tb_is_offsite_notify"
                android:src="@mipmap/top_bar_down_normal"
                android:layout_width="54dp"
                android:layout_height="30dp"
                toggle:onColor="@color/green_light"
                toggle:offColor="@color/white"
                toggle:spotColor="@color/white"
                toggle:offBorderColor="@color/grey_light"
                toggle:borderWidth="2px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_item_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/dimen_small"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/clear_cache"/>
            <TextView
                android:id="@+id/tv_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_3"
                android:textSize="16sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_item_about"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="@dimen/dimen_small"
            android:paddingRight="@dimen/dimen_small"
            android:clickable="true"
            android:background="@drawable/item_normal_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_1"
                android:textSize="16sp"
                android:text="@string/about"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_alignParentBottom="true"
                android:background="@color/grey_dark_transparent"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_small"
            android:layout_marginRight="@dimen/dimen_small"
            android:layout_marginTop="@dimen/dimen_small"
            android:background="@drawable/btn_bg_red_selector"
            android:text="@string/login_out"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</ScrollView>
